kubernetes/main/apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      serviceAccountName: bitwarden
      containers:
        - name: bitwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.34.1-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: bitwarden-data
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 950
            allowPrivilegeEscalation: false
            runAsGroup: 950
      volumes:
        - name: bitwarden-data
          persistentVolumeClaim:
          claimName: bitwarden-data-pvc
