kubernetes/main/apps/vaultwarden/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "bitwarden.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /notifications/hub
      backendRefs:
        - name: bitwarden
          port: 3012
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bitwarden
          port: 80
